Mandatory API Changes to Support CRUD of resource
